--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
   "name": "jaxo",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A lightweight JavaScript library for making AJAX requests.",
   "module": "build/index.esm.js",
   "main": "build/index.js",
   "browser": "build/index.js",
+  "files": [
+    "build/*"
+  ],
   "scripts": {
-    "watch": "rollup -c -w",
-    "clean": "rimraf -rf build/index.js",
-    "build": "npm run clean && rollup -c",
+    "watch": "set NODE_ENV=developement && rollup -c -w",
+    "clean": "rimraf -rf build",
+    "build": "set NODE_ENV=production && npm run clean && rollup -c",
     "test": "npm run build && jest"
   },
   "devDependencies": {
+    "express": "^4.17.1",
     "jest": "^26.6.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.47.0",
     "rollup-plugin-terser": "^7.0.2"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/haikelfazzani/http-client-jaxo.git"
-  },
-  "bugs": {
-    "url": "https://github.com/haikelfazzani/http-client-jaxo.git/issues"
-  },
-  "homepage": "https://github.com/haikelfazzani/http-client-jaxo.git#readme",
-  "keywords": [    
+  "keywords": [
     "ajax",
     "request",
     "client",
@@ -33,6 +29,9 @@
     "XMLHttpRequest",
     "library"
   ],
+  "repository": "https://github.com/haikelfazzani/http-client-jaxo.git",
+  "bugs": "https://github.com/haikelfazzani/http-client-jaxo.git/issues",
+  "homepage": "https://github.com/haikelfazzani/http-client-jaxo.git#readme",
   "author": "Haikel Fazzani",
   "license": "MIT"
 }
