--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jaxo",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "A lightweight JavaScript library for making AJAX requests.",
   "module": "build/index.esm.js",
   "main": "build/index.js",
@@ -9,15 +9,13 @@
     "build/*"
   ],
   "scripts": {
-    "clean": "rimraf -rf build",
-    "watch": "set NODE_ENV=developement && rollup -c -w",
-    "build": "set NODE_ENV=production && npm run clean && rollup -c",
+    "watch": "NODE_ENV=production rollup -c -w",
+    "build": "NODE_ENV=production rollup -c",
     "test": "npm run build && jest"
   },
   "devDependencies": {
     "express": "^4.17.1",
-    "jest": "^26.6.3",
-    "rimraf": "^3.0.2",
+    "jest": "^26.6.3",    
     "rollup": "^2.56.3",
     "rollup-plugin-terser": "^7.0.2"
   },
@@ -27,6 +25,7 @@
     "client",
     "browser",
     "XMLHttpRequest",
+    "Xhr",
     "library"
   ],
   "repository": "https://github.com/haikelfazzani/http-client-jaxo.git",
